--- a/AppNgasal/app/src/main/res/layout/activity_komfirmasi.xml
+++ b/AppNgasal/app/src/main/res/layout/activity_komfirmasi.xml
@@ -4,38 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="quewquewcrew.appngasal.view.activity.Komfirmasi">
-
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/border"
-            android:orientation="vertical">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_margin="10dp"
-                android:orientation="vertical">
-
                 <ImageView
                     android:id="@+id/item.lapang.grid.image"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
                     android:src="@drawable/lap1" />
-
-            </LinearLayout>
-
             <LinearLayout
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginTop="-10dp"
+                android:layout_marginTop="-30dp"
                 android:gravity="left"
                 android:layout_marginLeft="10dp"
                 android:layout_marginBottom="5dp">
@@ -48,12 +38,13 @@
                     android:text="Your Name"
                     android:gravity="left"
                     android:textSize="18sp"
+                    android:textColor="#FFFF"
                     android:textStyle="bold" />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="220dp"
+                android:layout_marginLeft="260dp"
                 android:layout_marginTop="-30dp"
                 android:orientation="vertical">
 
@@ -64,6 +55,7 @@
                     android:layout_marginTop="3dp"
                     android:gravity="right"
                     android:text="RP."
+                    android:textColor="#FFFF"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -75,97 +67,124 @@
                     android:layout_marginRight="35dp"
                     android:layout_marginTop="-22dp"
                     android:gravity="right"
+                    android:textColor="#FFFF"
                     android:text="Harga"
                     android:textSize="18sp"
                     android:textStyle="bold" />
             </LinearLayout>
-    </LinearLayout>
-    <TextView
-        android:layout_width="340dp"
-        android:layout_height="wrap_content"
-        android:text="Form Konfirmasi"
-        android:layout_gravity="center"
-        android:textAlignment="center"
-        android:layout_marginBottom="10dp"
-        android:textAllCaps="true"
-        android:textSize="16dp"
-        android:textStyle="bold"
-        />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/border"
+        android:layout_margin="20dp"
+        android:gravity="center"
+        >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Form Konfirmasi"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textSize="18dp"
+            android:layout_marginBottom="3dp"
+            android:textStyle="bold"
+            />
+    </LinearLayout>
+        <View
+            android:layout_marginTop="-20dp"
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:layout_gravity="center"
+        android:background="@drawable/border"></View>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:orientation="vertical"
         >
         <LinearLayout
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"
-            android:orientation="vertical">
+            android:layout_marginLeft="11dp"
+            android:layout_marginBottom="-5dp"
+            android:orientation="horizontal">
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
+                android:textSize="16dp"
+                android:textStyle="bold"
                 android:text="Tanggal Pemesanan :"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:text="Waktu Booking           :"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="5dp"
-                android:text="Total Pembayaran     :"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="140dp"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginLeft="150dp"
-            android:layout_marginTop="-65dp"
-            >
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:orientation="vertical"
-                android:gravity="center">
+
             <TextView
                 android:id="@+id/id_tanggal_booking"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TANGGAL BOOKING"
-                android:layout_marginBottom="5dp"/>
+                android:textStyle="bold"
+                android:textSize="16dp"
+                android:layout_marginBottom="10dp"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:textSize="16dp"
+                android:textStyle="bold"
+                android:text="Waktu Booking           :"/>
             <TextView
                 android:id="@+id/id_waktu_booking"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="WAKTU BOOKING"
+                android:layout_marginLeft="2dp"
+                android:textSize="16dp"
+                android:textStyle="bold"
                 android:layout_marginBottom="5dp"
                 />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="170dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:textSize="16dp"
+                android:textStyle="bold"
+                android:text="Total Pembayaran     :"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:layout_marginLeft="-15dp"
+                android:layout_marginLeft="24dp"
                 >
                 <TextView
-                    android:layout_marginLeft="110dp"
-                    android:layout_width="22dp"
+                    android:layout_width="26dp"
+                    android:textStyle="bold"
+                    android:textSize="16dp"
                     android:layout_height="wrap_content"
                     android:text="RP."
                     />
                 <TextView
                     android:id="@+id/id_total_harga"
-                    android:layout_width="200dp"
+                    android:layout_width="150dp"
+                    android:textStyle="bold"
+                    android:textSize="16dp"
                     android:layout_height="wrap_content"
                     android:text="TOTAL HARGA"
                     />
             </LinearLayout>
-        </LinearLayout>
         </LinearLayout>
     </LinearLayout>
         <Button
@@ -176,5 +195,10 @@
             android:background="#dea717"
             android:textColor="#FFFFFF"
             android:layout_margin="10dp"/>
+    </LinearLayout>
+    </ScrollView>
 </LinearLayout>
-</LinearLayout>
+
+
+
+
