--- a/AppNgasal/app/src/main/res/layout/activity_wallet.xml
+++ b/AppNgasal/app/src/main/res/layout/activity_wallet.xml
@@ -19,6 +19,13 @@
             android:textAlignment="center"
             android:layout_marginBottom="20dp"
             android:text="Your Wallet"/>
+        <View
+            android:layout_width="350dp"
+            android:layout_height="3dp"
+            android:layout_marginTop="-10dp"
+            android:layout_marginBottom="20dp"
+            android:layout_gravity="center"
+            android:background="@drawable/border"></View>
         <Button
             android:id="@+id/btntop"
             android:layout_width="350dp"
@@ -26,17 +33,6 @@
             android:layout_height="wrap_content"
             android:background="#DEA717"
             android:text="TOP-UP HERE"
-            />
-        <TextView
-            android:id="@+id/home"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Back to menu"
-            android:textAllCaps="true"
-            android:textSize="14dp"
-            android:textAlignment="center"
-            android:textStyle="bold"
-            android:layout_margin="10dp"
             />
 
     </LinearLayout>
