--- a/AppNgasal/app/src/main/res/layout/item_futsal_grid.xml
+++ b/AppNgasal/app/src/main/res/layout/item_futsal_grid.xml
@@ -1,80 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_margin="8dp"
-    android:background="@drawable/border"
-    android:layout_height="wrap_content">
-
+<LinearLayout android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginRight="8dp"
-        android:layout_height="wrap_content">
-        <LinearLayout
+        >
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="5dp">
+            >
             <ImageView
-                android:layout_width="match_parent"
                 android:id="@+id/item.lapang.grid.image"
-                android:src="@drawable/lap1"
-                android:layout_marginRight="10dp"
-                android:layout_height="200dp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="200dp"
-            android:layout_marginLeft="15dp"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginBottom="5dp">
-
-            <TextView
-                android:id="@+id/item.lapang.grid.name"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:text="Nama Lapangan"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-            <TextView
-                android:id="@+id/item.lapang.grid.kecamatan"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="left"
-                android:text="Kecamatan"
-                android:textSize="12sp"
-                />
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="115dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="260dp"
-            android:layout_marginTop="-43dp"
-            android:layout_gravity="right">
-            <TextView
-                android:layout_width="28dp"
                 android:layout_height="wrap_content"
-                android:text="RP."
-                android:layout_marginLeft="25dp"
-                android:layout_gravity="right"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-            <TextView
-                android:id="@+id/item.lapang.grid.harga"
-                android:layout_width="80dp"
+                android:adjustViewBounds="true"
+                android:src="@drawable/lap1" />
+            <LinearLayout
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:gravity="left"
-                android:layout_marginTop="-20dp"
-                android:text="Harga"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-    </LinearLayout>
-
-</android.support.v7.widget.CardView>
+                android:orientation="vertical"
+                android:layout_marginTop="185dp"
+                android:layout_marginLeft="5dp"
+                >
+                <TextView
+                    android:id="@+id/item.lapang.grid.name"
+                    android:layout_width="150dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="left"
+                    android:text="Nama Lapangan"
+                    android:textColor="#FFFF"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/item.lapang.grid.kecamatan"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="left"
+                    android:textColor="#FFFF"
+                    android:text="Kecamatan"
+                    android:textSize="12sp"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="right"
+                android:layout_marginTop="197dp"
+                android:layout_marginLeft="300dp"
+                >
+                <TextView
+                    android:layout_width="28dp"
+                    android:layout_height="wrap_content"
+                    android:text="RP."
+                    android:textColor="#FFFF"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/item.lapang.grid.harga"
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="left"
+                    android:text="Harga"
+                    android:textColor="#FFFF"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+            </android.support.v7.widget.CardView>
+         </LinearLayout>
+</LinearLayout>
